Fix mobile paragraph spacing in Radiogram4

--- a/src/components/radiograms/radiogram4/Radiogram4.css
+++ b/src/components/radiograms/radiogram4/Radiogram4.css
@@ -159,7 +159,7 @@
   .radiogram-4 p {
     line-height: 1.5;
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 1rem;
   }
 
   .location-link {
